# set-covering-problem

./: CMakeLists.txt  Makefile  README.md  a.out  launcher  params
data/: demo00.txt  demo01.txt  demo02.txt  ex_balas1.txt
data/collected/: 00-presolcplex_efgh.csv  01-presoldominance_efgh.csv  02-presolcplexdominance_efgh.csv  03-18000cplexred_gh.csv  04-18000cplex_gh.csv  05-3600cplex_efgh.csv  06-3600cplex_nocuts_efgh.csv  07-3600balasbcrule1_4_efgh.csv  08-3600balasbcrule1_6_efgh.csv  09-3600balasbcrule1_8_efgh.csv  10-3600balasbcrule1_sparse_4_efgh.csv  11-3600balasbcrule1_sparse_6_efgh.csv  12-3600balasbcrule1_sparse_8_efgh.csv  13-3600balasbcrule2_efgh.csv  2019_07_08_13_49-maxcol_sparse_ef.csv  2019_07_09_16_25-balasbcrule2_ef.csv  2019_07_10_20_05-maxcol_ef.csv  (+1 more)
report/: mydeitesi_eng.cls  report.bbl  report.bib  report.tex
src/: aux.c  aux.h  balas_common.cpp  balas_common.hpp  balas_dense.c  balas_dense.cpp  balas_dense.h  balas_dense.hpp  balas_main.cpp  balas_main.hpp  balas_solver.cpp  balas_solver.hpp  balas_sparse.c  balas_sparse.cpp  balas_sparse.h  balas_sparse.hpp  callbacks.c  callbacks.cpp  callbacks.h  callbacks.hpp  common.cpp  common.hpp  cpx_callbacks.cpp  cpx_callbacks.hpp  cpx_common.cpp  cpx_common.hpp  cpx_main.cpp  cpx_main.hpp  cpx_solver.cpp  cpx_solver.hpp  main.c  main.cpp  main.h  main.hpp  params.hpp  preprocessing.c  preprocessing.cpp  preprocessing.h  preprocessing.hpp  sc.c  (+3 more)
test/: Makefile  balas_dense.cpp  balas_dense.hpp  common.hpp  main.cpp  test
tests/: Makefile  catch.hpp  test_balas_dense.cpp  test_balas_sparse.cpp
(+132 files in other folders)
